<resources>
    <string name="app_name">TemiUI</string>
    <string name="mapview">Map View</string>
    <string name="zoneview">Zone View</string>
    <string name="home">Home</string>
    <string name="homely">Homely</string>
    <string name="navhomely">Homely Zone Navigation</string>
    <string name="wifi">Our Wifi Password</string>
    <string name="tvwifi">Scan QR code to connect to our Wifi</string>
    <string name="tvsubhead">Select a zone below.</string>

    <string name="next">Next Step</string>
    <string name="back">Previous Step</string>
    <string name="htc">How to check</string>
    <string name="htb">How to purchase</string>
    <string name="htn">How to navigate</string>

    <string name="pause">Pause navigation</string>
    <string name="pausenav">Navigation paused</string>
    <string name="change">Change Direction</string>
    <string name="follow">User Follow Mode</string>

    <string name="maptitle">Select a button below to navigate Homely</string>

    //Zones - All
    <string name="zone">Zone</string>
    <string name="zA">A</string>
    <string name="zB">B</string>
    <string name="zC">C</string>
    <string name="zD">D</string>
    <string name="zE">E</string>
    <string name="zF">F</string>
    <string name="zG">G</string>
    <string name="zoneRug">Rugs</string>

    <string name="zoneA">Zone A</string>
    <string name="zoneB">Zone B</string>
    <string name="zoneC">Zone C</string>
    <string name="zoneD">Zone D</string>
    <string name="zoneE">Zone E</string>
    <string name="zoneF">Zone F</string>
    <string name="zoneG">Zone G</string>

    <string name="nil"> </string>

    //Zone A
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="a3">A3</string>
    <string name="a4">A4</string>
    <string name="a5">A5</string>
    <string name="a6">A6</string>
    <string name="a7">A7</string>
    <string name="a8">A8</string>
    <string name="a9">A9</string>

    //Zone B
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="b4">B4</string>
    <string name="b5">B5</string>
    <string name="b6">B6</string>
    <string name="b7">B7</string>
    <string name="b8">B8</string>
    <string name="b9">B9</string>

    //Zone C
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="c3">C3</string>
    <string name="c4">C4</string>
    <string name="c5">C5</string>
    <string name="c6">C6</string>

    //Zone D
    <string name="d1">d1</string>
    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="d5">d5</string>
    <string name="d6">d6</string>
    <string name="d7">d7</string>

    //Zone E
    <string name="e1">e1</string>
    <string name="e2">e2</string>
    <string name="e3">e3</string>
    <string name="e4">e4</string>
    <string name="e5">e5</string>
    <string name="e6">e6</string>
    <string name="e7">e7</string>
    <string name="e8">e8</string>
    <string name="e9">e9</string>
    <string name="e10">e10</string>
    <string name="e11">e11</string>

    //Zone F
    <string name="f1">f1</string>
    <string name="f2">f2</string>
    <string name="f3">f3</string>
    <string name="f4">f4</string>
    <string name="f5">f5</string>
    <string name="f6">f6</string>

    //Zone G
    <string name="g1">G1</string>
    <string name="g2">G2</string>
    <string name="g3">G3</string>

    //Menu
    <string name="zones">Zones</string>
    <string name="brands">Brands</string>
    <string name="haylee">Haylee</string>

    <string name="utils">Utilities</string>

    //Nav Buttons
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>

    <string name="whichview">Which view do you want to see?</string>
    <string name="viewselect">Zone Navigation</string>

    <string name="popular">Popular locations</string>


    <string name="faq">FAQs</string>
    <string name="htcdetail">How to check product details</string>
    <string name="htbdetail">How to make a purchase</string>
    <string name="options">Options</string>
    <string name="menu">Menu</string>

    <string name="open">Open</string>
    <string name="closeb">Close</string>

    <string name="howto">How to</string>

    <string name="steptooltip">*Press the Step buttons to navigate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="admin">Admin Login</string>
    <string name="settings_page">Settings page</string>
    <string name="battery">Battery</string>
    <string name="robot_speed">Robot Speed</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="slow">Slow</string>
    <string name="apply_settings">Apply settings</string>

</resources>