<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coral"
    tools:context=".fragments.Zone2Fragment">

    <TextView
        android:id="@+id/tvTitleZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/qanelas_semibold"
        android:text="@string/navhomely"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvTitleZone"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="630dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/zoneTitle"
                android:fontFamily="@font/qanelas_semibold"
                android:text="@string/zones"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:columnCount="3"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/btn2ZoneA"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/zoneA"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneB"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/zoneB"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneC"
                    android:layout_width="180dp"
                    android:padding="10dp"
                    android:text="@string/zoneC"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneD"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/zoneD"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneE"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/zoneE"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneF"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/zoneF"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneG"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/zoneG"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneBrands"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/brands"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn2ZoneUtils"
                    android:layout_width="180dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/utils"
                    android:background="@drawable/button_zone"
                    android:textSize="30sp" />

            </GridLayout>


        </LinearLayout>

        <Button
            android:layout_width="5dp"
            android:layout_height="480dp"
            android:layout_gravity="center"
            android:background="@color/dblue" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gridFrame"/>
    </LinearLayout>

</RelativeLayout>