<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coral"
    android:padding="30dp"
    tools:context=".fragments.HtcFragment">

    <ImageView
        android:id="@+id/ivHtc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:paddingTop="70dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/temiux_htc1" />

    <TextView
        android:id="@+id/tvHtc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/qanelas_semibold"
        android:gravity="center_horizontal"
        android:text="@string/htcdetail"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:textSize="60sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steptooltip"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:gravity="center|end"/>

    <LinearLayout
        android:id="@+id/stepBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/tvHtc"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">

        <Button
            android:id="@+id/stepBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textSize="30sp"/>

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/stepBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            android:textSize="30sp"/>

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/stepBar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            android:textSize="30sp"/>
    </LinearLayout>

</RelativeLayout>