<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/coral"
    tools:context=".fragments.HtbFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ivHtb"
        android:scaleType="fitXY"
        android:scaleX="1.2"
        android:scaleY="1.1"
        android:layout_below="@id/tvHtp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/temiux_htp1"/>

    <TextView
        android:id="@+id/tvHtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/htbdetail"
        android:textSize="60sp"
        android:fontFamily="@font/qanelas_semibold"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steptooltip"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:gravity="center|end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/stepBarHtb"
        android:orientation="horizontal"
        android:layout_below="@id/tvHtp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepBarHtb1"
            android:text="@string/step1"
            android:textSize="30sp"/>

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepBarHtb2"
            android:text="@string/step2"
            android:textSize="30sp"/>
        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepBarHtb3"
            android:text="@string/step3"
            android:textSize="30sp"/>
    </LinearLayout>




</RelativeLayout>