<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/coral"
    android:gravity="center"
    tools:context=".fragments.TemiNavFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/coral"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/qanelas_semibold"
            android:text="@string/navhomely"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/tvSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/qanelas_semibold"
            android:text="@string/zone"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPause"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/pause"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/change"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnFollow"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/follow"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/dblue"
                android:fontFamily="@font/qanelas_semibold"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/closeb"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>